fix for live site not showing initial slide

--- a/style.css
+++ b/style.css
@@ -42,9 +42,9 @@ a:hover {
   white-space: nowrap;
 }
 
-.swiper-slide {
+/* .swiper-slide {
   height: 0;
-}
+} */
 
 /* .swiper-container {
   width: 100%;
